# weather-web

./: .env.example  pyproject.toml
config/: settings.py  urls.py
templates/users/: login.html  registration.html
users/: backends.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
